# chess

./: CMakeLists.txt  README.md  a.out  chess  main  main.cpp
Board/: board.cpp
Pieces/: piece.cpp
SFML/: BoardViewer.cpp  PieceViewer.cpp  WindowManager.cpp  board-example.cpp
